templates/uptime-bot_template.yaml
---
# Source: uptime-bot/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-bot
  namespace: default
  labels:
    app.kubernetes.io/name: uptime-bot
    helm.sh/chart: uptime-bot-1.1.12
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: uptime
    app.kubernetes.io/name: uptime-bot
    
    app: uptime-bot
    release: prometheus
    role: agent
  annotations:
spec:
  type: ClusterIP
  ports:
    
    - name: http
      port: 80
      targetPort: 3001
    - name: metrics
      port: 9913
      protocol: TCP
      targetPort: 3001
    - name: https
      port: 443
      targetPort: 3001
  selector:
      
    app: uptime-bot
    release: prometheus
    role: agent
---
# Source: uptime-bot/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-bot
  labels:
    app.kubernetes.io/name: uptime-bot
    helm.sh/chart: uptime-bot-1.1.12
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: uptime
    app.kubernetes.io/name: uptime-bot
    app: uptime-bot
    release: prometheus
    role: agent
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-bot
      release: prometheus
      role: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-bot
        helm.sh/chart: uptime-bot-1.1.12
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: uptime
        app.kubernetes.io/name: uptime-bot
        app: uptime-bot
        release: prometheus
        role: agent
    spec:
      priorityClassName: "system-cluster-critical"
      serviceAccountName: uptime-bot
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: uptime-bot
                    app.kubernetes.io/instance: release-name
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: please_update
      containers:
        - name:  uptime-bot 
          image: registry.hub.docker.com/veriks/uptime-datasource:v0.1.6
          imagePullPolicy: "IfNotPresent"
          args:
          ports:
            - name: http-port
              protocol: TCP
              containerPort: 3001
          startupProbe:
            httpGet:
              path: /status
              port: http-port
            failureThreshold: 30
            periodSeconds: 6
          livenessProbe:
            httpGet:
              path: /status
              port: http-port 
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /status
              port: http-port  
            initialDelaySeconds: 3
            failureThreshold: 3
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          securityContext:
            runAsUser: 0
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/data
              name: uptime-bot
      volumes: 
        - name: uptime-bot
          persistentVolumeClaim:
            claimName: uptime-bot
        - emptyDir: {}
          name: extra-data
---
# Source: uptime-bot/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: uptime-bot-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: uptime-bot
    helm.sh/chart: uptime-bot-1.1.12
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: uptime
    app.kubernetes.io/name: uptime-bot
    app: uptime-bot
    release: prometheus
    role: agent
spec:
  rules:
    - host: uptime.veriksystems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-bot
                port:
                  number: 80
